--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -211,7 +211,7 @@
                         android:layout_height="match_parent"
                         android:gravity="center_vertical"
                         android:paddingLeft="10dp"
-                        android:text="@string/support"
+                        android:text="@string/introduce"
                         />
                 </LinearLayout>
 
