--- a/app/src/main/res/layout/fragment_product_review.xml
+++ b/app/src/main/res/layout/fragment_product_review.xml
@@ -1,20 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.main.order.ProductReviewFragment">
 
-    <include android:id="@+id/layout_header"
-        layout="@layout/toolbar_header" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcv_product_review"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/grey_white"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        android:orientation="vertical">
 
-</LinearLayout>
+        <include android:id="@+id/layout_header"
+            layout="@layout/toolbar_header" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_product_review"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/grey_white"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+    </LinearLayout>
+
+    <include android:id="@+id/layoyt_loading"
+        android:visibility="gone"
+        layout="@layout/layout_loading" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
