--- a/app/src/main/res/layout/item_topping.xml
+++ b/app/src/main/res/layout/item_topping.xml
@@ -8,7 +8,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxWidth="180dp"
-        android:textSize="18sp"
+        android:textSize="15sp"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:layout_toStartOf="@+id/tv_price"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"/>
@@ -17,7 +19,7 @@
         android:id="@+id/tv_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:layout_toStartOf="@+id/layout_quantity"
         android:layout_centerVertical="true"
         android:layout_marginStart="10dp"
